--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=  https://2763-190-136-112-118.ngrok-free.app/
+VITE_API_URL=  https://898f-181-91-136-214.ngrok-free.app/
 VITE_HIGH_LVL = 1
